# config/packages/nelmio_api_doc.yaml
@@ -11,8 +11,106 @@ nelmio_api_doc:
                 scheme: bearer
                 name: Authorization
                 in: header
-            security:
-                - Bearer: []
+        security:
+            - Bearer: []
+        definitions:
+            client_error:
+                type: object
+                properties:
+                    code:
+                        type: integer
+                        required: true
+                        descriptin: http error code
+                        example: 4xx
+                    message:
+                        type: string
+                        required: true
+                        descriptin: error message
+                        example: Something went wrong
+            server_error:
+                type: object
+                properties:
+                    code:
+                        type: integer
+                        required: true
+                        descriptin: http error code
+                        example: 5xx
+                    message:
+                        type: string
+                        required: true
+                        descriptin: error message
+                        example: Something went wrong
+            credentials:
+                type: object
+                properties:
+                    username:
+                        type: string
+                        required: true
+                        description: Username
+                        example: test@example.org
+                    password:
+                        type: string
+                        required: true
+                        description: Password
+                        example: p4ssw0rd
+            authentication:
+                type: object
+                properties:
+                    token:
+                        type: string
+                        required: true
+                        description: JWT token
+                        example: eyJhbGciOiJSUzI1NiJ9.eyJyb2xlcyI6W10sInVzZXJuYW1lIjoidGVzdEBib2xkLm5ldC5wbCIsImlhdCI6MTUyODQ2MzAwOCwiZXhwIjoxNTI4NTQ5NDA4fQ
+            create_product:
+                type: object
+                properties:
+                    price:
+                        type: string
+                        required: true
+                        description: 'Price of the item in "000.00" format'
+                    type:
+                        type: string
+                        required: true
+                        description: 'Type of the product'
+                    color:
+                        type: string
+                        required: true
+                        description: 'Color of the product'
+                    size:
+                        type: string
+                        required: true
+                        description: 'Size of the product'
+            create_product_success:
+                type: object
+                properties:
+                    id:
+                        type: string
+                        required: true
+                        description: 'UUID of created Product'
+                    price:
+                        type: string
+                        required: true
+                        description: 'Price of the item in "000.00" format'
+                    type:
+                        type: string
+                        required: true
+                        description: 'Type of the product'
+                    color:
+                        type: string
+                        required: true
+                        description: 'Color of the product'
+                    size:
+                        type: string
+                        required: true
+                        description: 'Size of the product'
+            create_product_invalid_arguments:
+                type: object
+                properties:
+                    code:
+                        type: number
+                        example: 400
+                    message:
+                        type: string
     areas: # to filter documented areas
         path_patterns:
             - ^/api(?!/doc$)
